<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_shopping_cart_24"
            android:title="@string/nav_products" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_shopping_bag_24"
            android:title="@string/nav_my_orders" />
        <item
            android:id="@+id/nav_my_favorites"
            android:icon="@drawable/ic_favorite_24"
            android:title="@string/nav_my_favorites" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_local_offer_24"
            android:title="@string/nav_offers" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_24"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="@string/nav_help">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contact_support_24"
                android:title="@string/nav_contact_us" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
